2008-11-09  Scott Ellington <scott.ellington@gmail.com> 

	* proj.README.TXT, docs, docs/proj.README.TXT, docs/README.txt,
	  Cumberland.csproj: move stuff around
	* AssemblyInfo.cs: set version

2008-11-08  Scott Ellington <scott.ellington@gmail.com> 

	

2008-11-08  Scott Ellington <scott.ellington@gmail.com> 

	

2008-11-08  Scott Ellington <scott.ellington@gmail.com> 

	* Projection/ProjFourWrapper.cs: comment out unused

2008-11-07  Scott Ellington <scott.ellington@gmail.com> 

	* Web/TileProvider.cs: add methods

2008-11-05  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.csproj, Web, Web/TileProvider.cs: extract tile generating
	  code into separate class

2008-11-05  Scott Ellington <scott.ellington@gmail.com> 

	* WellKnownText.cs: add methods
	* Data/FeatureType.cs, Data/IFeatureSource.cs, Cumberland.csproj:
	  separate

2008-11-04  Scott Ellington <scott.ellington@gmail.com> 

	* Drawing/MapDrawer.cs: break and fix

2008-11-04  Scott Ellington <scott.ellington@gmail.com> 

	* Drawing/MapDrawer.cs: draw theming
	* Data/Shapefile/DBaseIIIFile.cs: trim extra spaces from character
	  field values

2008-11-04  Scott Ellington <scott.ellington@gmail.com> 

	* Feature.cs, Data/Shapefile/Shapefile.cs, Data/IFeatureSource.cs,
	  Data/SimpleFeatureSource.cs: hook up shapefile

2008-11-04  Scott Ellington <scott.ellington@gmail.com> 

	* Layer.cs, Xml/Serialization/MapSerializer.cs, Style.cs: set up
	  theming infrastructure

2008-11-04  Scott Ellington <scott.ellington@gmail.com> 

	* Layer.cs, Drawing/MapDrawer.cs, Xml/Serialization/MapSerializer.cs,
	  Style.cs, Cumberland.csproj: move layer style stuff to separate
	  class
	* Projection/ProjFourWrapper.cs: switch public constants to static
	  readonly

2008-11-04  Scott Ellington <scott.ellington@gmail.com> 

	* Drawing/MapDrawer.cs: cleanup

2008-11-04  Scott Ellington <scott.ellington@gmail.com> 

	* Drawing/MapDrawer.cs: draw image symbol on center point
