@@ -1,5 +1,11 @@
 2008-11-09  Scott Ellington <scott.ellington@gmail.com> 
 
+	* Drawing/MapDrawer.cs: switch to graphicspath for polygons
+	* Xml/Serialization/MapSerializer.cs: allow saving simple features in
+	  maps
+
+2008-11-09  Scott Ellington <scott.ellington@gmail.com> 
+
 	* proj.README.TXT, docs, docs/proj.README.TXT, docs/README.txt,
 	  Cumberland.csproj: move stuff around
 	* AssemblyInfo.cs: set version
